--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,11 +14,17 @@ a {
   color: lighten($base-background, 30%);
 }
 
+header img {
+  max-height: 5rem;
+  margin: 0.25rem;
+}
+
 main {
   background-color: $main-background;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   color: $main-font-color;
+  text-align: center;
   height: 75%;
   padding: 1rem 0;
   display: flex;
@@ -28,6 +34,7 @@ main {
 }
 
 main h2 {
+  font-family: monospace;
   color: lighten($main-font-color, 10%);
 }
 
@@ -39,27 +46,16 @@ footer {
   align-items: center;
 }
 
-footer > * {
-  margin: 1rem;
+footer {
+  margin: 1rem 0;
 }
 
 footer img {
   height: 4rem;
+  margin: 0 1rem;
 }
 
-footer p {
+.react-footer {
   margin: 0;
-}
-
-.centered {
-  text-align: center;
-}
-
-.welcome {
-  font-family: monospace;
-}
-
-#imgContainer > img {
-  max-height: 5rem;
-  margin: 0.25rem;
+  background-color: darken($base-background, 10%);
 }
