--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
 }
 
 a {
@@ -14,9 +18,14 @@ a {
   color: lighten($base-background, 30%);
 }
 
+header {
+  text-align: center;
+  color: $main-background;
+}
+
 header img {
-  max-height: 5rem;
-  margin: 0.25rem;
+  max-height: 6rem;
+  margin: 1rem 0 0;
 }
 
 main {
@@ -30,7 +39,8 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-content: center;
+  align-content: stretch;
+  flex-grow: 1;
 }
 
 main h2 {
